# astute-backend-django

./: README.md  models.py  pyproject.toml  test_websocket.py
astute_backend/: admin.py  apps.py  consumers.py  models.py  serializers.py  views.py
astute_backend/migrations/: 0001_initial.py  0002_alter_good_category_alter_good_comment_and_more.py  0003_remove_good_active_remove_good_category_and_more.py  0004_good_active_good_category_good_comment_and_more.py  0005_alter_good_coordinates_horizontal_and_more.py  0006_location_remove_good_coordinates_horizontal_and_more.py  0007_locationtype_location_location_type.py  0008_alter_location_location_type.py  0009_alter_location_location_type.py
astute_backend/recommender/: base.py  dummy.py
astute_backend/reid/: base.py  osnet_reid.py
astute_backend/route/: base.py  dummy.py  greedy.py
astute_backend/tracker/: base.py  dummy.py  yolo.py  zones.json
backend/: asgi.py  settings.py  urls.py
data/examples/1/: 1.json  2.json
data/examples/1/sql/: 1_location_type.sql  2_location.sql  3_goods.sql
